# nursing-station

./: .gitignore  AGENTS.md  ARCHIVIST_DRAFTS.json  ARCHIVIST_VERDICTS.json  CLAUDE.md  CODE_REVIEW_FINDINGS.json  PROMPT.md  README.md  SAFETY_SCOPE.md  caid-manifest.json  oidc_service_access.json  pyproject.toml
backend/nursing_station/: __init__.py  config.py  database.py  integration.py  main.py  port_registry.py  synthetic_seed.py
design-system/nursing-station/: MASTER.md
docs/: ARCHITECTURE.md  CAID_POST_BUILD_REVIEW.md  DPIA.md  OPERATIONS_RUNBOOK.md  PHASE_2_INTEGRATION_CONTRACTS.md  PRIVACY_NOTICE.md  REQUIREMENTS.md  RETENTION_POLICY.md  STANDARDS_PROFILE.md  SYNTHETIC_DATA_GOVERNANCE.md  TRACEABILITY.md  USE_CASES.md
evidence/signalbox-phase2/: README.md  phase2-headed-result.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  resolve-ports.cjs  vite.config.ts
frontend/e2e/: clinical.spec.ts
frontend/src/: App.tsx  main.tsx
safety/: AGENT_CSO_HITL_PROCEDURE.md  CLINICAL_DEPLOYMENT_GATE.json  CLINICAL_RISK_MANAGEMENT_PLAN.md  CLINICAL_SAFETY_CASE_REPORT.md  CRMP.md  HAZARD_DISPOSITION.md  HAZARD_LOG.md  INTENDED_USE.md  PHASE_2_INTEGRATION_HAZARDS.md  hazards.json
scripts/: evaluate_clinical_deployment_gate.py  generate_canonical_matrices.py  generate_scenario_success_evidence.py  run_phase2_seeded_journey.py
shared/: generate_contract.py  openapi.json
tests/: conftest.py  test_api.py  test_canonical_matrix_integrity.py  test_governance_artifacts.py  test_port_registry.py
(+26 files in other folders)
