[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symphonix-nursing-station"
version = "0.1.0"
description = "Inpatient nursing workflow and ward station clinical sibling"
requires-python = ">=3.12"
dependencies = [
  "bcrypt>=4.2",
  "fastapi>=0.115",
  "PyJWT>=2.10",
  "pydantic>=2.10",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = ["httpx>=0.28", "pytest>=8.3", "ruff>=0.9"]

[tool.hatch.build.targets.wheel]
packages = ["backend/nursing_station"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
